# sqlite-playground

./: .gitignore  BENCHMARK_RESULTS.md  CMakeLists.txt  README.md  REFACTORING_PLAN.md  SUPPLEMENTARY_REPORT.md  analyze_benchmark_json.py  main.cpp  results.json  run_read_campaign.sh
long_running_counters_collection/: .gitignore  AGENTS.md  README.md  bench_counters_workload.py  counters_surrogate.py  time_counters_collection_full_scan.py  timings.csv
long_running_counters_collection/test_cases/: README.md  extract_counters_collection_plan_indexes.py  proposal2_indexes_for_counters_collection.sql  proposal3_indexes_for_counters_collection.sql
plans/: README.md  READ_QUERY_INVESTIGATION_CHECKLIST.md  read_original_explain.md
reference_schema/: rocpd_source_schema.sql
schemas/: rocpd_combined_indexes.sql  rocpd_indexes.sql  rocpd_tables.sql  rocpd_tables_combined.sql  rocpd_tables_combined_indexed.sql  rocpd_tables_indexed.sql
scripts/: analyze_benchmark_json.py  compare_initial_deferred_read.sh  explain_read_plans.sh
source/: asset_paths.cpp  asset_paths.h  benchmarks.cpp  benchmarks.h  cli_read_campaign.cpp  cli_read_campaign.h  data_loader.cpp  data_loader.h  db_helpers.cpp  db_helpers.h  schema_combined.cpp  schema_combined.h  schema_original.cpp  schema_original.h  types.cpp  types.h
